--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,107 +4,166 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Convertisseur de Devises</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    fontFamily: {
+                        'inter': ['Inter', 'sans-serif'],
+                    },
+                    colors: {
+                        primary: {
+                            50: '#f0f4ff',
+                            500: '#667eea',
+                            600: '#5a67d8',
+                            700: '#4c51bf',
+                        },
+                        secondary: {
+                            500: '#764ba2',
+                            600: '#6b46c1',
+                        }
+                    },
+                    animation: {
+                        'float': 'float 3s ease-in-out infinite',
+                        'pulse-slow': 'pulse 3s cubic-bezier(0.4, 0, 0.6, 1) infinite',
+                    },
+                    keyframes: {
+                        float: {
+                            '0%, 100%': { transform: 'translateY(0px)' },
+                            '50%': { transform: 'translateY(-10px)' },
+                        }
+                    }
+                }
+            }
+        }
+    </script>
 </head>
-<body>
-    <div class="container">
-        <header>
-            <h1>💱 Convertisseur de Devises</h1>
-            <p class="subtitle">Conversion en temps réel avec les derniers taux de change</p>
+<body class="font-inter bg-gradient-to-br from-primary-500 via-purple-600 to-secondary-500 min-h-screen">
+    <div class="max-w-4xl mx-auto px-4 py-6 min-h-screen flex flex-col">
+        <header class="text-center mb-10 text-white">
+            <h1 class="text-4xl md:text-5xl font-bold mb-4 drop-shadow-lg animate-float">
+                💱 Convertisseur de Devises
+            </h1>
+            <p class="text-lg md:text-xl opacity-90 font-light">
+                Conversion en temps réel avec les derniers taux de change
+            </p>
         </header>
 
-        <main>
-            <div class="converter-card">
-                <form id="converterForm">
-                    <div class="input-group">
-                        <label for="amount">Montant</label>
-                        <input type="number" 
-                               id="amount" 
-                               step="0.01" 
-                               min="0" 
-                               placeholder="Entrez le montant"
-                               required>
+        <main class="flex-1">
+            <div class="bg-white/95 backdrop-blur-md rounded-3xl p-8 md:p-10 shadow-2xl mb-10 border border-white/20">
+                <form id="converterForm" class="space-y-6">
+                    <div class="space-y-2">
+                        <label for="amount" class="block text-sm font-semibold text-gray-700">
+                            Montant
+                        </label>
+                        <div class="relative">
+                            <input type="number" 
+                                   id="amount" 
+                                   step="0.01" 
+                                   min="0" 
+                                   placeholder="Entrez le montant"
+                                   required
+                                   class="w-full px-4 py-4 text-lg border-2 border-gray-200 rounded-2xl bg-gray-50 focus:bg-white focus:border-primary-500 focus:ring-4 focus:ring-primary-50 transition-all duration-300 placeholder-gray-400">
+                        </div>
                     </div>
 
-                    <div class="currency-row">
-                        <div class="currency-group">
-                            <label for="fromCurrency">De</label>
-                            <select id="fromCurrency" required>
+                    <div class="grid grid-cols-1 md:grid-cols-3 gap-4 items-end">
+                        <div class="space-y-2">
+                            <label for="fromCurrency" class="block text-sm font-semibold text-gray-700">
+                                De
+                            </label>
+                            <select id="fromCurrency" required 
+                                    class="w-full px-4 py-4 text-base border-2 border-gray-200 rounded-2xl bg-gray-50 focus:bg-white focus:border-primary-500 focus:ring-4 focus:ring-primary-50 transition-all duration-300 cursor-pointer">
                                 <option value="">Sélectionnez...</option>
                             </select>
                         </div>
 
-                        <button type="button" id="swapButton" class="swap-btn" title="Inverser les devises">
-                            ⇄
-                        </button>
+                        <div class="flex justify-center md:pb-2">
+                            <button type="button" id="swapButton" 
+                                    title="Inverser les devises"
+                                    class="w-14 h-14 bg-gradient-to-r from-primary-500 to-secondary-500 hover:from-primary-600 hover:to-secondary-600 text-white rounded-full text-2xl font-bold shadow-lg hover:shadow-xl transform hover:scale-110 hover:rotate-180 transition-all duration-300 flex items-center justify-center">
+                                ⇄
+                            </button>
+                        </div>
 
-                        <div class="currency-group">
-                            <label for="toCurrency">Vers</label>
-                            <select id="toCurrency" required>
+                        <div class="space-y-2">
+                            <label for="toCurrency" class="block text-sm font-semibold text-gray-700">
+                                Vers
+                            </label>
+                            <select id="toCurrency" required
+                                    class="w-full px-4 py-4 text-base border-2 border-gray-200 rounded-2xl bg-gray-50 focus:bg-white focus:border-primary-500 focus:ring-4 focus:ring-primary-50 transition-all duration-300 cursor-pointer">
                                 <option value="">Sélectionnez...</option>
                             </select>
                         </div>
                     </div>
 
-                    <button type="submit" id="convertButton" class="convert-btn">
+                    <button type="submit" id="convertButton" 
+                            class="w-full bg-gradient-to-r from-primary-500 to-secondary-500 hover:from-primary-600 hover:to-secondary-600 text-white font-semibold py-5 px-6 rounded-2xl text-lg shadow-lg hover:shadow-xl transform hover:-translate-y-1 transition-all duration-300 disabled:opacity-70 disabled:cursor-not-allowed disabled:transform-none flex items-center justify-center gap-3">
                         <span id="buttonText">Convertir</span>
-                        <div id="loadingSpinner" class="spinner" style="display: none;"></div>
+                        <div id="loadingSpinner" class="hidden">
+                            <div class="w-5 h-5 border-2 border-white/30 border-t-white rounded-full animate-spin"></div>
+                        </div>
                     </button>
                 </form>
 
-                <div id="result" class="result-container" style="display: none;">
-                    <div class="result-header">
-                        <h3>Résultat de la conversion</h3>
-                        <span id="timestamp" class="timestamp"></span>
+                <div id="result" class="hidden mt-8 bg-gradient-to-r from-green-50 to-emerald-50 border border-green-200 rounded-2xl p-6 shadow-lg">
+                    <div class="flex justify-between items-center mb-6">
+                        <h3 class="text-xl font-bold text-green-700 flex items-center gap-2">
+                            ✅ Résultat de la conversion
+                        </h3>
+                        <span id="timestamp" class="text-sm text-gray-600 bg-white px-3 py-1 rounded-full"></span>
                     </div>
                     
-                    <div class="conversion-display">
-                        <div class="amount-display">
-                            <span id="originalAmount" class="amount"></span>
-                            <span id="originalCurrency" class="currency-code"></span>
+                    <div class="flex flex-col md:flex-row items-center justify-center gap-4 md:gap-8 mb-6">
+                        <div class="flex items-baseline gap-2 text-center">
+                            <span id="originalAmount" class="text-3xl md:text-4xl font-bold text-gray-800"></span>
+                            <span id="originalCurrency" class="text-lg font-semibold text-gray-600 bg-white px-3 py-1 rounded-lg shadow-sm"></span>
                         </div>
-                        <div class="equals">=</div>
-                        <div class="amount-display converted">
-                            <span id="convertedAmount" class="amount"></span>
-                            <span id="convertedCurrency" class="currency-code"></span>
+                        <div class="text-2xl text-gray-500 font-light">=</div>
+                        <div class="flex items-baseline gap-2 text-center">
+                            <span id="convertedAmount" class="text-3xl md:text-4xl font-bold text-green-600"></span>
+                            <span id="convertedCurrency" class="text-lg font-semibold text-gray-600 bg-white px-3 py-1 rounded-lg shadow-sm"></span>
                         </div>
                     </div>
                     
-                    <div class="rate-info">
-                        <p id="rateDisplay"></p>
+                    <div class="text-center pt-4 border-t border-green-200">
+                        <p id="rateDisplay" class="text-gray-600"></p>
                     </div>
                 </div>
 
-                <div id="error" class="error-container" style="display: none;">
-                    <div class="error-icon">⚠️</div>
-                    <div>
-                        <h4>Erreur de conversion</h4>
-                        <p id="errorMessage"></p>
+                <div id="error" class="hidden mt-8 bg-gradient-to-r from-red-50 to-pink-50 border border-red-200 rounded-2xl p-6 shadow-lg">
+                    <div class="flex items-center gap-4">
+                        <div class="text-3xl">⚠️</div>
+                        <div class="flex-1">
+                            <h4 class="text-lg font-bold text-red-700 mb-2">Erreur de conversion</h4>
+                            <p id="errorMessage" class="text-red-600"></p>
+                        </div>
                     </div>
                 </div>
             </div>
 
-            <div class="features">
-                <div class="feature-card">
-                    <div class="feature-icon">🌍</div>
-                    <h3>Devises Mondiales</h3>
-                    <p>Support pour 15+ devises principales du monde entier</p>
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-10">
+                <div class="bg-white/20 backdrop-blur-md rounded-2xl p-6 text-center text-white border border-white/30 hover:bg-white/25 transition-all duration-300 hover:-translate-y-2 hover:shadow-2xl group">
+                    <div class="text-4xl mb-4 group-hover:animate-pulse">🌍</div>
+                    <h3 class="text-xl font-semibold mb-3">Devises Mondiales</h3>
+                    <p class="text-white/90 leading-relaxed">Support pour 15+ devises principales du monde entier</p>
                 </div>
-                <div class="feature-card">
-                    <div class="feature-icon">⚡</div>
-                    <h3>Temps Réel</h3>
-                    <p>Taux de change actualisés automatiquement</p>
+                <div class="bg-white/20 backdrop-blur-md rounded-2xl p-6 text-center text-white border border-white/30 hover:bg-white/25 transition-all duration-300 hover:-translate-y-2 hover:shadow-2xl group">
+                    <div class="text-4xl mb-4 group-hover:animate-pulse">⚡</div>
+                    <h3 class="text-xl font-semibold mb-3">Temps Réel</h3>
+                    <p class="text-white/90 leading-relaxed">Taux de change actualisés automatiquement</p>
                 </div>
-                <div class="feature-card">
-                    <div class="feature-icon">💯</div>
-                    <h3>Précis</h3>
-                    <p>Calculs précis avec 4 décimales</p>
+                <div class="bg-white/20 backdrop-blur-md rounded-2xl p-6 text-center text-white border border-white/30 hover:bg-white/25 transition-all duration-300 hover:-translate-y-2 hover:shadow-2xl group">
+                    <div class="text-4xl mb-4 group-hover:animate-pulse">💯</div>
+                    <h3 class="text-xl font-semibold mb-3">Précis</h3>
+                    <p class="text-white/90 leading-relaxed">Calculs précis avec 4 décimales</p>
                 </div>
             </div>
         </main>
 
-        <footer>
+        <footer class="mt-auto pt-8 text-center text-white/80 text-sm">
             <p>&copy; 2024 Convertisseur de Devises - Données fournies par ExchangeRate-API</p>
         </footer>
     </div>
